Fix: Resolve the vertical and horizontal scroll issue by hidden the overflow content that go out of the root element

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  overflow: hidden;
 }
 
 body {
@@ -27,6 +29,7 @@ body {
   background-color: #000;
   overflow: hidden;
 }
+
 
 .vertical-text {
   writing-mode: vertical-lr;
